# peg_in_hole

./: .gitattributes  .gitignore  README.md  pyproject.toml
data/20251112_redsylinder/data/: right_joint_bounds.npy
data/20251112_redsylinder/test/: right_arm_states.npy  right_digit_imgs.npy  right_imgs.npy  teleop_left_arm_states.npy
data/20251112_redsylinder/train/: right_digit_imgs.npy  right_imgs.npy
data/20251112_redsylinder1/data/: teleop_left_joint_bounds.npy
data/20251112_redsylinder1/test/: left_arm_states.npy  left_hand_imgs.npy  left_imgs.npy  right_hand_imgs.npy  teleop_right_arm_states.npy
libs/: fullBPTT.py
log/20250710_0628_18/: SARNN.pth  args.json
log/20251028_0631_51/: args.json
log/20251122_1718_03/: args.json
log/20251125_2013_16/: SARNN.pth  args.json  events.out.tfevents.1764069198.kubo-ZA9C-R49.1147710.0
log/20251125_2026_57/: SARNN.pth  args.json
log/20251128_1910_42/: SARNN.pth  args.json
log/20251128_1925_07/: args.json  events.out.tfevents.1764325510.A00.325234.0
log/20251128_1926_58/: SARNN.pth  args.json  events.out.tfevents.1764325622.A00.325481.0
log/20251128_1928_31/: SARNN.pth  args.json  events.out.tfevents.1764325715.A00.325843.0
log/20251128_1929_30/: SARNN.pth  args.json
log/20251130_0407_59/: args.json  events.out.tfevents.1764443282.A00.455934.0
log/20251130_0408_34/: SARNN.pth  args.json
log/20251209_1616_25/: SARNN.pth  args.json
log/20251209_1631_58/: SARNN.pth  args.json
log/20251211_1700_59/: args.json
utils/: __init__.py  dataset.py  processor.py  selector.py
(+162 files in other folders)
